Bug 644473 - lirasm does not support backwards jump (r=njn)